--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ edition = "2021"
 [dependencies.snarkvm-fields]
 #path = "../snarkVM/fields"
 
+[dependencies.snarkvm-utilities]
+#path = "../snarkVM/utilities"
